==> apache/nuttx/arch/risc-v/src/k210/k210_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/serial/serial.h>
#include <arch/board/board.h>
#include "riscv_internal.h"
#include "k210_config.h"
#include "chip.h"
#include "k210.h"
#    define CONSOLE_DEV     g_uart0port     /* UART0 is console */
#    define TTYS0_DEV       g_uart0port     /* UART0 is ttyS0 */
#    define SERIAL_CONSOLE  1
#    define TTYS0_DEV       g_uart0port     /* UART0 is ttyS0 */
#    define SERIAL_CONSOLE  1

static int up_setup(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

#if 0 /* TODO: Setup divisor */
#endif

  /* Enable RX */

  up_serialout(priv, UART_RXCTL_OFFSET, 1);

  /* Set TX watermark level to 1 and enable TX */

  up_serialout(priv, UART_TXCTL_OFFSET, 1 << 16 | 1);

  return OK;
}

static int up_interrupt(int irq, void *context, void *arg)
{
  struct uart_dev_s *dev = (struct uart_dev_s *)arg;
  struct up_dev_s   *priv;
  uint32_t           status;
  int                passes;

  DEBUGASSERT(dev != NULL && dev->priv != NULL);
  priv = (struct up_dev_s *)dev->priv;

  /* Loop until there are no characters to be transferred or,
   * until we have been looping for a long time.
   */

  for (passes = 0; passes < 256; passes++)
    {
      /* Retrieve interrupt pending status */

      status = up_serialin(priv, UART_IP_OFFSET);

      if (status == 0)
        {
          break;
        }

      if (status & UART_IP_RXWM)
        {
          /* Process incoming bytes */

          uart_recvchars(dev);
        }

      if (status & UART_IP_TXWM)
        {
          /* Process outgoing bytes */

          uart_xmitchars(dev);
        }
    }

  return OK;
}

static void up_rxint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  irqstate_t flags = enter_critical_section();

  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->im |= UART_IE_RXWM;
#endif
    }
  else
    {
      priv->im &= ~UART_IE_RXWM;
    }

  up_serialout(priv, UART_IE_OFFSET, priv->im);
  leave_critical_section(flags);
}

static bool up_rxavailable(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  /* Return true is data is available in the receive data buffer */

  uint32_t rxdata = up_serialin(priv, UART_RXDATA_OFFSET);

  /* NOTE: In K210, actual data is also retrieved */

  g_rxdata = rxdata & 0xff;

  return (rxdata & UART_RX_EMPTY) == 0;
}

static void up_txint(struct uart_dev_s *dev, bool enable)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;
  irqstate_t flags;

  flags = enter_critical_section();
  if (enable)
    {
      /* Enable the TX interrupt */

#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      priv->im |= UART_IE_TXWM;
      up_serialout(priv, UART_IE_OFFSET, priv->im);

      /* Fake a TX interrupt here by just calling uart_xmitchars() with
       * interrupts disabled (note this may recurse).
       */

      uart_xmitchars(dev);
#endif
    }
  else
    {
      /* Disable the TX interrupt */

      priv->im &= ~UART_IE_TXWM;
      up_serialout(priv, UART_IE_OFFSET, priv->im);
    }

  leave_critical_section(flags);
}

static bool up_txready(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  /* Return TRUE if the TX FIFO is not full */

  return (up_serialin(priv, UART_TXDATA_OFFSET) & UART_TX_FULL) == 0;
}

static bool up_txempty(struct uart_dev_s *dev)
{
  struct up_dev_s *priv = (struct up_dev_s *)dev->priv;

  /* Return TRUE if the TX wartermak is pending */

  return (up_serialin(priv, UART_IP_OFFSET) & UART_IP_TXWM) == 1;
}
